<resources>
    <string name="app_name">Online Platform</string>
    <string name="doftdare_splash">Online Platform</string>
    <string name="search">Search</string>
    <string name="price_range">Price Range</string>
    <string name="lowest">Min</string>
    <string name="highest">Max</string>
    <string name="location">Location</string>
    <string name="select">Select</string>
    <string name="availability">Availability</string>
    <string name="max_250">max $250</string>
    <string name="_250_500">$250 - $500</string>
    <string name="_500_1000">$500 - $1000</string>
    <string name="_1000_2000">$1000 - $2000</string>
    <string name="_2000_3000">$2000 - $3000</string>
    <string name="min_3000">min $3000</string>
    <string name="image">image</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="image_button">image button</string>
    <string name="_0">0</string>
    <string name="booking">BOOKING</string>
    <string name="_0000">$0000</string>
    <string name="reservation_fee">Reservation Fee</string>
    <string name="_00000000000">00000000000</string>
    <string name="mail">doftdare@gmail.com</string>
    <string name="_1_1">1+1</string>
    <string name="_2_1">2+1</string>
    <string name="_3_1">3+1</string>
    <string name="_3_2">3+2</string>
    <string name="_4_1">4+1</string>
    <string name="_4_2">4+2</string>
    <string name="_4_3">4+3</string>
    <string name="_5_1">5+1</string>
    <string name="_6_1">6+1</string>
    <string name="xl">XL</string>
    <string name="types_of_cleaning">Types of Cleaning:</string>
    <string name="general_cleaning_250">General Cleaning - $250</string>
    <string name="deep_cleaning_500">Deep Cleaning - $500</string>
    <string name="laundry_and_or_ironing_100">Laundry and/or Ironing - $100</string>
    <string name="organizing_and_decluttering_100">Organizing and Decluttering - $100</string>
    <string name="window_cleaning_200">Window Cleaning - $200</string>
    <string name="special_requests_500">Special Requests - $500</string>
    <string name="pet_related_cleaning_500">Pet-related Cleaning - $500</string>
    <string name="reviews_and_rating">Reviews and Rating</string>
    <string name="warning_message">You can cancel your reservation up to 48 hours prior to the reservation date and time.</string>
    <string name="update">update</string>
    <string name="cancel">cancel</string>
    <string name="reservation_information">Reservation Information</string>
    <string name="user">Akın Kemal Doğangün</string>
</resources>