<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity"
    android:background="@color/app_color_5">

    <LinearLayout
        android:id="@+id/research_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/style_main_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/akin"
                    android:scaleType="centerCrop"
                    android:background="@color/app_color_4"
                    android:contentDescription="@string/image">
                </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:padding="5dp">
            </TextView>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_support_agent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_button">
            </ImageButton>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_message"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_button">
            </ImageButton>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/research_relativity_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_search_box"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_search"
                android:hint="@string/search"
                android:padding="10dp"
                android:autofillHints="text"
                android:inputType="text" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/filtering_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Fiyat Filtreleme -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:drawableTopCompat="@drawable/baseline_price_change" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/min_price_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:layout_weight="1"
                        android:hint="@string/lowest"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:background="@drawable/style_white_box"
                        android:layout_margin="1dp"
                        android:autofillHints="number" />

                    <EditText
                        android:id="@+id/max_price_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:layout_weight="1"
                        android:hint="@string/highest"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:background="@drawable/style_white_box"
                        android:layout_margin="1dp"
                        android:autofillHints="number" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radio_group_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_price_1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/max_250"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_price_2"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/_250_500"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_price_3"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/_500_1000"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_price_4"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/_1000_2000"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_price_5"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/_2000_3000"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_price_6"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/min_3000"
                        android:textColor="@color/white"/>
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp">
            </TextView>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Location Filtreleme -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:drawableTopCompat="@drawable/baseline_edit_location_alt"/>

                <Button
                    android:id="@+id/select_location_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/app_color_2"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="130dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="UselessParent">

                            <ImageView
                                android:src="@drawable/large_map"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scaleType="centerCrop"
                                android:translationX="0dp"
                                android:translationY="0dp"
                                android:contentDescription="@string/image" />
                        </HorizontalScrollView>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp">
            </TextView>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Gün Filtreleme -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/availability"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:drawableTopCompat="@drawable/baseline_calendar_month"/>

                <RadioGroup
                    android:id="@+id/radio_group_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_day_1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/monday"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_day_2"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/tuesday"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_day_3"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/wednesday"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_day_4"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/thursday"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/radio_day_5"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/friday"
                        android:textColor="@color/white"/>
                    <RadioButton
                        android:id="@+id/radio_day_6"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/saturday"
                        android:textColor="@color/white"/>
                    <RadioButton
                        android:id="@+id/radio_day_7"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="12sp"
                        android:text="@string/sunday"
                        android:textColor="@color/white"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_person_search"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/image_button">
        </ImageButton>

        <TextView
            android:id="@+id/total_result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_cleaners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image">
    </ImageView>
</LinearLayout>