<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="2dp"
        android:backgroundTint="@color/app_color_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/app_color_4"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center">
                </TextView>

                <ImageView
                    android:id="@+id/score_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image">
                </ImageView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/date_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:layout_gravity="top"
                    android:gravity="right"
                    tools:ignore="RtlHardcoded">
                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/comment_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="12sp"
                android:textColor="@color/black">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="2dp">

                    <ImageView
                        android:id="@+id/rating_1_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/app_color_4"
                        android:contentDescription="@string/image">
                    </ImageView>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="2dp">

                    <ImageView
                        android:id="@+id/rating_2_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/app_color_4"
                        android:contentDescription="@string/image">
                    </ImageView>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="right"
                    tools:ignore="RtlHardcoded">

                    <ImageButton
                        android:id="@+id/mood_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_mood"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/image_button">
                    </ImageButton>

                    <TextView
                        android:id="@+id/mood_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginRight="5dp">
                    </TextView>

                    <ImageButton
                        android:id="@+id/bad_mood_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_mood_bad"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/image_button">
                    </ImageButton>

                    <TextView
                        android:id="@+id/bad_mood_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginRight="5dp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>